--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,13 @@
           <hr>
           
           <span class="credits left"><a href="muhammadtabaza@gmail.com">muhammadtabaza@gmail.com</a></span>
-          <span class="credits right"><a href="https://twitter.com/Tabz_98">Twitter</a>, <a href="https://github.com/Tabzz98">GitHub</a>, <a href="https://medium.com/@muhammadtabaza">Medium</a></span>
+
+          <span class="credits right">
+            <a href="https://twitter.com/Tabz_98">Twitter</a>, 
+            <a href="https://github.com/Tabzz98">GitHub</a>, 
+            <a href="https://medium.com/@muhammadtabaza">Medium</a>,
+            <a href="https://www.linkedin.com/in/muhammad-tabaza-011644138/">LinkedIn</a>
+          </span>
           
         </div>
 
